--- a/C14_data.Rmd
+++ b/C14_data.Rmd
@@ -27,13 +27,14 @@ The following edits made to the data:
 •	Exp 3: SUR: pico: vial A – remove
 •	Exp 4: SUR: pico, nano, syn – repeated vial B, take the average
 •	Exp 6: SUR: nano – repeated vial A, remove lower value
+•	Exp 6: SUR: vial C, error in recording. Changed in excel sheet
 •	Exp 7: SUR: nano – remove
 •	Exp 7: DCM: nano – remove
 •	Exp 8: DCM: nano – remove
 •	Exp 8: SUR: nano: 2000 cell count – remove
 
 
-The calculations of primary production based on single cell C14 uptake for cells sorted by flow cytometry. (https://vaulot.netlify.app/2018/05/20/compute-primary-production-based-on-single-cell-c14-uptake/)
+The calculations of primary production are based on single cell C14 uptake for cells sorted by flow cytometry. (https://vaulot.netlify.app/2018/05/20/compute-primary-production-based-on-single-cell-c14-uptake/)
 To calculate the pp values, pico and syn had cell counts of 2000, 4000, 10000. The gradient of the lm is calculated by grouping vials A, B, C together to get the DPM per cell for each experiment. For nano, the cells were sorted mostly with one cell count of 2000. The DPM per cell is calculated by the average of vial A, B, C to get the value for each experiment. 
 
 
@@ -52,7 +53,7 @@ Data points to check for pico and syn calculations:
 
 ## Read table for pico and syn. Data points to edit are made here. 
 ```{r}
-C14_DPM <- readxl::read_excel("TAN1810_14C-Pico_25052020_QA.xlsx", sheet = "Complete data TAN1810", skip = 11) %>%
+C14_DPM <- readxl::read_excel("TAN1810_14C-Pico_25052020_QA_1.0.xlsx", sheet = "Complete data TAN1810", skip = 11) %>%
   dplyr::select (`Cycle#`, `EXP#`, SAMPLE, `Vial code             (i - initials, A to C - light incubation, D - dark)`, `sorting population`, `Cells sorted`, DPM1, DIC, `SA_dpm_mL`) %>%   
      rename(cycle = `Cycle#`,
             exp = `EXP#`,
@@ -63,13 +64,13 @@ C14_DPM <- readxl::read_excel("TAN1810_14C-Pico_25052020_QA.xlsx", sheet = "Comp
             dpm = DPM1,
             SA = `SA_dpm_mL`) %>%
     filter(population != "Nano") %>%
-    filter(!(exp == 3 & sample == "SUR" & vial == "A" & population == "Pico"))  # Exp 3: SUR: pico: vial A – remove
+    filter(!(exp == 3 & sample == "SUR" & vial == "A" & population == "Pico")) %>%
+    filter(!(exp == 2 & sample == "DCM" & vial == "A" & population == "Pico"))
     #Exp 4: SUR: pico, nano, syn – repeated vial B, take the average
 #C14_DPM <- rowwise(cycle, exp, sample, population, vial, cells_sorted) %>% 
 #  summarise(m = mean(dpm, DIC, SA))
-  #filter(!(exp == 2 & sample == "DCM" & vial == "A")) # I removed this row as there was only one value for the population in the vial.
-  #filter(!(exp == 6 & sample == 'SUR' & vial == 'C' & population == 'Pico' & cells_sorted == 2000)) %>% # This value is too high
-  #filter(!(exp == 6 & sample == 'SUR' & vial == 'C' & population == 'Syn' & cells_sorted == 2000)) # This value is too high
+ 
+  
 C14_DPM
 ```
 
@@ -117,7 +118,7 @@ y = ax + b
 See: https://cran.r-project.org/web/packages/broom/vignettes/broom_and_dplyr.html
 
 ```{r}
- C14_DPM_model_1 <- C14_DPM_corrected %>%
+C14_DPM_model_1 <- C14_DPM_corrected %>%
   group_by(cycle, exp, sample, population, DIC, SA) %>% 
   tidyr::nest() %>% 
   mutate(
@@ -153,8 +154,8 @@ pp_cal_1
 # 2. Calculations for Nano (average)
 
 Data points to check for Nano calculations:
-•	exp 5: SUR. Vial D is high. Also marked in the exceel sheet. I removed.
-• exp 2: DCM. cells sorted for vial A is 496. removed
+•	exp 5: SUR. Vial D is high. Also marked in the excel sheet. Removed, to be checked
+• exp 2: DCM. cells sorted for vial A is 496. 
 
 The following edits made to Nano data:
 •	Exp 6: SUR: nano – repeated vial A, remove lower value
@@ -170,7 +171,7 @@ Edits to be made:
       
 ```{r}
 # Changed the excel sheet read, with final dpm and DIC values
-C14_DPM_nano <- readxl::read_excel("TAN1810_14C-Pico_25052020_QA.xlsx", sheet = "Complete data TAN1810", skip = 11)%>% 
+C14_DPM_nano <- readxl::read_excel("TAN1810_14C-Pico_25052020_QA_1.0.xlsx", sheet = "Complete data TAN1810", skip = 11)%>% 
   dplyr::select (`Cycle#`, `EXP#`, SAMPLE, `Vial code             (i - initials, A to C - light incubation, D - dark)`, `sorting population`, `Cells sorted`, DPM1, DIC, `SA_dpm_mL`) %>%   
      rename(cycle = `Cycle#`,
             exp = `EXP#`,
@@ -181,14 +182,12 @@ C14_DPM_nano <- readxl::read_excel("TAN1810_14C-Pico_25052020_QA.xlsx", sheet = 
             dpm = DPM1,
             SA = `SA_dpm_mL`) %>%
     filter(population == "Nano") %>%
-    # values removed/replaced below
     filter(!(exp == 5 & sample == "SUR" & vial =="D")) %>%
     filter(!(exp == 7 & sample == "SUR")) %>%
     filter(!(exp == 7 & sample == "DCM")) %>%
     filter(!(exp == 8 & sample == "DCM")) %>%
     filter(!(exp == 8 & sample == "SUR" & vial == "C" & cells_sorted == 2000)) %>%
-    filter(!(exp == 6 & sample == "SUR" & vial == "A" & dpm == 384)) %>%
-    filter(!(exp == 2 & sample == "DCM" & vial == "A")) 
+    filter(!(exp == 6 & sample == "SUR" & vial == "A" & dpm == 384)) 
 C14_DPM_nano
 ```
 
@@ -233,7 +232,7 @@ pp_cal_nano
 https://vaulot.netlify.com/2018/05/20/compute-primary-production-based-on-single-cell-c14-uptake/
 
 ```{r} 
-pp_cal_nano <- mutate(pp_cal_nano, pp = DIC*mean_dpm_corrected*(1/(SA*24*1000))*10^9*1.05) %>% #divide by 1000 cells sorted
+pp_cal_nano <- mutate(pp_cal_nano, pp = DIC*mean_dpm_corrected*(1/(SA*24*cells_sorted))*10^9*1.05) %>% 
   ungroup() %>%
   filter(pp >= 0) # remove negative pp values
 
@@ -246,7 +245,7 @@ pp_cal_nano
 ```
 
 
-
+# 3. Join pico, syn and nano values together
 
 ```{r}
 pp_cal_1_join<-full_join(pp_cal_1,pp_cal_nano) %>%
@@ -257,8 +256,13 @@ pp_cal_1_join
 
 ```{r}
 pp_cal_1_join %>% 
-  group_by(population, sample) %>% 
-  summarise(pp_mean = mean(pp, na.rm = TRUE))
+  group_by(population,sample) %>% 
+  summarise(pp_mean = mean(pp, na.rm = TRUE),
+            ssd = sd(pp, na.rm = TRUE),
+            count = n()) %>%
+  mutate(se = ssd / sqrt(count),
+        lower_CI = pp_mean - qt(1 - (0.05 / 2), count - 1) * se,
+        upper_CI = pp_mean + qt(1 - (0.05 / 2), count - 1) * se)
 
 pp_cal_1_join %>% 
   ggplot() +
@@ -277,7 +281,9 @@ The units for pp is fgC/h/cell.
 Rii (2016) finds 5–11 fmol C/cell/day for Syn which corresponds to 60-132 fg /day/cell ie 2.5 to 5.5 fg/h/cell.
 
 
-# 3. Compute based on Method 2 - Compute lm for  ABC separately
+# 4. Compute based on Method 2 - Compute lm for  ABC separately
+
+Not using this method.
 
 ## Plots
 Do plots for each group. One regression line based on the EXP, Sample and Populations
